# Arqiver

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  NEWS  PKGBUILD  README.md  about.ui  arqiver.desktop  arqiver.pro  backends.cpp  backends.h  config.cpp  config.h  label.h  lineedit.h  main.cpp  mainWin.cpp  mainWin.h  mainWin.ui  pref.cpp  pref.h  pref.ui  svgicons.cpp  svgicons.h  tarBackend.cpp  tarBackend.h  treeWidget.cpp  treeWidget.h
data/: Info.plist  arq.qrc  arqiver.desktop  arqiver.icns
data/translations/: arqiver.ts  arqiver_az.ts  arqiver_be.ts  arqiver_bg.ts  arqiver_ca.ts  arqiver_cs.ts  arqiver_de.ts  arqiver_de_DE.ts  arqiver_el.ts  arqiver_en_GB.ts  arqiver_eo.ts  arqiver_es.ts  arqiver_et.ts  arqiver_fi.ts  arqiver_fr.ts  arqiver_he.ts  arqiver_hi.ts  arqiver_hr.ts  arqiver_hu.ts  arqiver_it.ts  arqiver_ka.ts  arqiver_kab.ts  arqiver_ko.ts  arqiver_lt.ts  arqiver_nl.ts  arqiver_pl.ts  arqiver_pt.ts  arqiver_pt_BR.ts  arqiver_ru.ts  arqiver_tr.ts  arqiver_uk.ts  arqiver_zh_CN.ts  arqiver_zh_TW.ts
